[package]
name = "findold"
version = "1.0.0"
authors = ["Heiko<heiko@freedesk.net>"]
edition = "2021"
decription = "Find old files by times (atime, mtime or ctime)."
readme = "readme.md"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
walkdir = "^2"
regex = "1"
chrono = "^0.4"
clap = "3.2.6"
syslog = "^6"
log = "^0.4"
version-sync = "^0.9"
fancy-regex = "^0.10"
humantime = "^2"
